# homehub

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  go.work  go.work.sum  services.yaml
.gitee/pipelines/: verify.yml
apps/control/: Dockerfile  catalog.json  device-tokens.openapi.yaml  go.mod  go.sum  openapi.yaml
apps/iam/: Dockerfile  go.mod  go.sum  openapi.yaml
apps/portal/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
deploy/acme/: nginx.conf
deploy/ai-gateway/: providers.json
deploy/beszel/: config.yml
deploy/catalog/: services.json
deploy/compose/: .env.example  README.md  compose.v2.yaml  compose.yaml  openfga-entrypoint.sh  openfga.Dockerfile  v2.env.example
deploy/host/: docker-daemon.json  homehub-host-firewall.service  homehub-host-firewall.sh  journald-homehub.conf
deploy/scripts/: bootstrap-beszel.sh  check-owner-bootstrap.sh  check-running-beszel.sh  check-running-demos.sh  check-running-dev.sh  check-running-edge.sh  check-running-hermes-terminal.sh  check-running-public.sh  homehub-agent-api  identity_key.py  initialize-secrets.sh  install-bws.sh  install-hermes-terminal.sh  install-host-baseline.sh  install-ip-certificate.sh  (+6 more)
docs/: current-state.md  development-guide.md  environment.md  hermes-homehub-integration.md  iphone-drop-shortcut.md  next-steps.md
schemas/: services.schema.json
services/demo-counter/: Cargo.toml  Dockerfile  openapi.yaml
services/demo-counter/src/: main.rs
tests/: test_new_service.py
tools/: homehubctl
(+245 files in other folders)
