[package]
name = "demo-counter"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"

[dependencies]
axum = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
